--- a/mongo-demo/package.json
+++ b/mongo-demo/package.json
@@ -1,5 +1,14 @@
 {
   "dependencies": {
     "mongoose": "^8.3.3"
-  }
+  },
+  "name": "mongo-demo",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
